--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ pages:
   - apt update && apt -y install python3-pip
   - pip3 install -r requirements.txt
   - make html
-  - mv _build/html/ public/
+  - mv build/html/ public/
   artifacts:
     paths:
     - public
