--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,8 @@
-image: ubuntu
+image: registry.videolan.org/videolan-gitlab-pages:20200113205145
 
 pages:
   stage: deploy
   script:
-  - apt update && apt -y install python3-pip
-  - pip3 install -r requirements.txt
   - make html
   - mv _build/html/ public/
   artifacts:
