CI: Use a runner tagged pages

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,8 @@
 image: registry.videolan.org/videolan-gitlab-pages:20200113205145
 
 pages:
+  tags:
+  - pages
   stage: deploy
   script:
   - make html
