--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ pages:
   - make versioned_localized_html LANGUAGE=en
   - make versioned_redirect LANGUAGE=en
   - mkdir -p public/html
-  - mv _build/html/* public/html
+  - mv _build/html/* public/html/
   artifacts:
     paths:
     - public
@@ -21,7 +21,7 @@ redirect:
   script:
   - make global_redirect LANGUAGE=en
   - mkdir -p public/html
-  - mv _build/html/* public/html
+  - mv _build/html/* public/html/
   artifacts:
     paths:
     - public
