--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,8 +7,8 @@ pages:
   script:
   - make versioned_localized_html LANGUAGE=en
   - make versioned_redirect LANGUAGE=en
-  - mkdir -p public/html
-  - mv _build/html/* public/html/
+  - mkdir -p public
+  - mv _build/html/* public/
   artifacts:
     paths:
     - public
@@ -20,8 +20,8 @@ redirect:
   stage: deploy
   script:
   - make global_redirect LANGUAGE=en
-  - mkdir -p public/html
-  - mv _build/html/* public/html/
+  - mkdir -p public
+  - mv _build/html/* public/
   artifacts:
     paths:
     - public
