gitlab-ci: use $RELEASE variable
git command does not seem to be present in docker image

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,8 +5,8 @@ pages:
   - pages
   stage: deploy
   script:
-  - make versioned_localized_html LANGUAGE=en
-  - make versioned_redirect LANGUAGE=en
+  - make versioned_localized_html VERSION=$RELEASE LANGUAGE=en
+  - make versioned_redirect VERSION=$RELEASE LANGUAGE=en
   - mkdir -p public
   - mv _build/html/* public/
   artifacts:
@@ -19,7 +19,7 @@ redirect:
   - pages
   stage: deploy
   script:
-  - make global_redirect LANGUAGE=en
+  - make global_redirect VERSION=$RELEASE LANGUAGE=en
   - mkdir -p public
   - mv _build/html/* public/
   artifacts:
