gitlab-ci: force global redirect only in 3.0

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,8 +30,6 @@ redirect:
     paths:
     - public
   only:
-    refs:
-      - branches
     variables:
-      - $RELEASE == "3.0"
+      - $CI_COMMIT_REF_NAME == "3.0"
 
